section prices and footer

--- a/index.html
+++ b/index.html
@@ -101,5 +101,19 @@
             </div>
         </div>
     </section>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="footer">
+        <div class="footer-first-list">
+          <span class="footer-list-name">Legal</span>
+          <span class="footer-list-name">Cookies</span>
+          <span class="footer-list-name">Sobre anuncios</span>
+        </div>
+        <div class="footer-text">
+          <span>© 2018 Trekk-in SPA</span>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
